--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "Sync your Vault with a GitHub repository.",
 	"author": "dDreistein",
 	"authorUrl": "https://github.com/dDreistein",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
